--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,9 @@
-[DEFAULT]
+[THREAD]
 sleepTime = 2
 SnippetThread = 3
 DetailThread = 3
 ReviewThread = 3
+HotelThread = 3
 UserThread = 3
 
 [LOCATION]
